# bitcoin_rust_wallet

./: .gitignore  Cargo.toml  json.json  mnemonic.txt  wallet.txt  wallet_orig.txt  wallet_other.txt
src/: access_manage.rs  app.rs  app_assistance.rs  bitcoin_wallet.rs  electrum_wallet_test.rs  json.json  main.rs  wallet.txt  wallet_file_manager copy.rs  wallet_file_manager.rs
src/app/: app_centrepanel.rs  app_sidepanel.rs  app_toppanel.rs
