[package]
name = "bitcoin_rust_wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bdk = { version = "0.29.0", features = ["keys-bip39", "sqlite"] }

bdk_electrum = "0.4.0"
egui = "0.24.0"

eframe = { default-features = false, features = [
    # accesskit struggles with threading
    "default_fonts",
    "wgpu",
    
] }
egui_extras = { version = "*", features = ["all_loaders"] }
image = { version = "0.24", default-features = false, features = [
  "jpeg",
  "png",
] }
bincode = "1.3"


env_logger = "0.10"
serde = "1.0.193"
secp256k1 = "0.28.0"
hex = "0.4.3"
csv = "1.3.0"
chrono = "0.4.31"
bdk_file_store = "0.2.0"
qrcode = { version = "0.12"}
qrcode-generator = "4.1.9"
chrono-tz = "0.8.4"
zxcvbn = "2.2.2"
serde_json = "1.0.108"
serde-encrypt = "0.7.0"
magic-crypt = "3.1.13"
tinyfiledialogs = "3.9.1"

